--- a/app/src/main/res/layout/create_exchange_fragment.xml
+++ b/app/src/main/res/layout/create_exchange_fragment.xml
@@ -3,13 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- Título -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -17,7 +21,6 @@
             android:text="@string/name"
             android:textSize="18sp" />
 
-        <!-- Campo de texto para el nombre -->
         <EditText
             android:id="@+id/exchangeNameEditText"
             android:layout_width="match_parent"
@@ -27,7 +30,6 @@
             android:minHeight="48dp"
             android:padding="8dp" />
 
-        <!-- Grupo de botones para seleccionar tipo -->
         <RadioGroup
             android:id="@+id/radioButtonGroupExchangeType"
             android:layout_width="match_parent"
@@ -49,7 +51,6 @@
                 android:text="@string/ingresos" />
         </RadioGroup>
 
-        <!-- Lista de categorías -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -132,4 +133,5 @@
             android:src="@drawable/tick" />
 
     </LinearLayout>
+    </ScrollView>
 </FrameLayout>
